# million_agents_test

./: .env.example  .pre-commit-config.yaml  ANSWERS.md  Makefile  README.md  pyproject.toml  tech_test.md
.github/workflows/: .ci.yml
api/: config.py  database.py  seed.py
api/alembic/: env.py
api/alembic/versions/: 001_init.py
api/internal/: main.py
api/internal/models/: tasks.py
api/internal/orm_models/: dao.py
api/internal/repository/: tasks.py
api/internal/routes/: tasks.py
api/internal/services/: tasks.py
deploy/: Dockerfile  docker-compose.yml
tests/: conftest.py
tests/integration/: test_tasks.py
tests/unit/: test_service.py
