[tool.poetry]
name = "million-agents"
version = "0.1.0"
description = "REST API for task management"
authors = []

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.116" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
asyncpg = "^0.30"
alembic = "^1.16"
pydantic = { extras = ["email"], version = "^2.0" }
pydantic-settings = "^2.0"
uvloop = "^0.21"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.23"
httpx = "^0.27"
black = "^24.0"
isort = "^5.13"
pre-commit = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
